[package]
name = "data-proxy-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fstrings = "0.2.3"
http = "0.2.9"
#reqwest = { version = "0.11.14", features = ["blocking"] }
reqwest = { version = "0.11.14", default-features = false, features = ["blocking"] }
